<resources>
    <string name="app_name">ATMconsultoria</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ATM Consultoria</string>
    <string name="nav_header_subtitle">atmconsultoria@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Princial</string>
    <string name="menu_gallery">Serviços</string>
    <string name="menu_slideshow">Clientes</string>

    <string name="menu_share">Contato</string>
    <string name="menu_send">Sobre</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment"></string>


    <!-- Conteudo ServiceFragment -->
    <string name="textServiceTitle1">Sistemas de Gestão de Qualidade</string>
    <string name="textServiceConteudo1">Qualidade é o grau de utilidade esperado ou adquirido de qualquer coisa, verificável através da forma e dos elementos constitutivos do mesmo e pelo resultado do seu uso. A palavra "qualidade" tem um conceito subjetivo que está relacionada com as percepções, necessidades e resultados em cada indivíduo</string>
    <string name="textServiceTitle2">Indicadores de Desenvolvimento</string>
    <string name="textServiceConteudo2">Os indicadores de desempenho organizacional são ferramentas básicas utilizadas para o gerenciamento do sistema organizacional. Com estes indicadores as Empresa são capazes de aferir os processos organizacionais, apontar possíveis alterações nos planejamentos já definidos</string>

    <!-- Conteudo ClientesFragment -->
    <string name="textClienteTitle1">Clientes</string>
    <string name="textClienteConteudo1">Um cliente é geralmente usado para se referir a um actual ou potencial comprador ou usuário dos produtos de um indivíduo ou organização, chamado o fornecedor ou vendedor. Isto acontece normalmente através da compra ou aluguel de bens ou serviços.</string>


</resources>
