<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_gray_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_servicos"
            android:icon="@drawable/ic_cloud_service_gray_24dp"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_clientes"
            android:icon="@drawable/ic_contacts_gray_24dp"
            android:title="@string/menu_slideshow" />

    </group>

    <item android:title="Comunicação">
        <menu>
            <item
                android:id="@+id/nav_contato"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_sobre"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
